--- a/mUC/checkpoint_trial/defining_cohort.ipynb
+++ b/mUC/checkpoint_trial/defining_cohort.ipynb
@@ -639,6 +639,33 @@
    "source": [
     "full_cohort.to_csv('full_cohort.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "884b924c-f747-4696-8fc2-f052b5eb3512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.13.1 (v3.13.1:06714517797, Dec  3 2024, 14:00:22) [Clang 15.0.0 (clang-1500.3.9.4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f6095a3-fada-48bc-a8fa-a9837a80b43d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
