--- a/mUC/notebooks/defining_cohort.ipynb
+++ b/mUC/notebooks/defining_cohort.ipynb
@@ -295,22 +295,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6506</th>\n",
-       "      <td>F95B8B499E9FA</td>\n",
+       "      <th>2715</th>\n",
+       "      <td>F031C8316272A</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2022-02-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15650</th>\n",
+       "      <td>F557D37E6733F</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2019-05-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4958</th>\n",
+       "      <td>F51D638D1B57E</td>\n",
        "      <td>Atezolizumab</td>\n",
-       "      <td>2017-03-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14124</th>\n",
-       "      <td>F554FF907590A</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2022-02-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12525</th>\n",
-       "      <td>F50E1B5D5B44C</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2020-03-10</td>\n",
+       "      <td>2021-03-15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -318,9 +318,9 @@
       ],
       "text/plain": [
        "           PatientID       LineName   StartDate\n",
-       "6506   F95B8B499E9FA   Atezolizumab  2017-03-31\n",
-       "14124  F554FF907590A  Pembrolizumab  2022-02-07\n",
-       "12525  F50E1B5D5B44C  Pembrolizumab  2020-03-10"
+       "2715   F031C8316272A  Pembrolizumab  2022-02-23\n",
+       "15650  F557D37E6733F  Pembrolizumab  2019-05-30\n",
+       "4958   F51D638D1B57E   Atezolizumab  2021-03-15"
       ]
      },
      "execution_count": 8,
@@ -448,32 +448,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13520</th>\n",
-       "      <td>FD10443FE12B8</td>\n",
+       "      <th>8833</th>\n",
+       "      <td>F711FDD9663D1</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2014-06-25</td>\n",
+       "      <td>2019-12-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5365</th>\n",
-       "      <td>F9DB617947C3C</td>\n",
+       "      <th>7375</th>\n",
+       "      <td>FDD17D03BA20A</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2021-06-21</td>\n",
+       "      <td>2017-02-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9286</th>\n",
-       "      <td>FDC7252667272</td>\n",
+       "      <th>2582</th>\n",
+       "      <td>F05AC183E3249</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2017-02-08</td>\n",
+       "      <td>2023-07-21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           PatientID LineName   StartDate\n",
-       "13520  FD10443FE12B8    chemo  2014-06-25\n",
-       "5365   F9DB617947C3C    chemo  2021-06-21\n",
-       "9286   FDC7252667272    chemo  2017-02-08"
+       "          PatientID LineName   StartDate\n",
+       "8833  F711FDD9663D1    chemo  2019-12-11\n",
+       "7375  FDD17D03BA20A    chemo  2017-02-06\n",
+       "2582  F05AC183E3249    chemo  2023-07-21"
       ]
      },
      "execution_count": 12,
@@ -558,46 +558,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8779</th>\n",
-       "      <td>F37553C494927</td>\n",
-       "      <td>chemo</td>\n",
-       "      <td>2020-03-20</td>\n",
+       "      <th>1109</th>\n",
+       "      <td>FAD1E6C58E49A</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2020-02-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1918</th>\n",
-       "      <td>F4800A812B339</td>\n",
-       "      <td>chemo</td>\n",
-       "      <td>2018-12-18</td>\n",
+       "      <th>7811</th>\n",
+       "      <td>FB50252A2AA0E</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2021-11-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5242</th>\n",
-       "      <td>F61FA2C30CD96</td>\n",
-       "      <td>chemo</td>\n",
-       "      <td>2013-09-11</td>\n",
+       "      <th>7283</th>\n",
+       "      <td>F4DDDE1E16844</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2019-01-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9491</th>\n",
-       "      <td>F12600412495E</td>\n",
+       "      <th>7423</th>\n",
+       "      <td>F4ACFC7D0B84A</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2022-04-29</td>\n",
+       "      <td>2017-05-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14514</th>\n",
-       "      <td>F187F567846EE</td>\n",
-       "      <td>chemo</td>\n",
-       "      <td>2017-03-27</td>\n",
+       "      <th>13316</th>\n",
+       "      <td>F1E850629228E</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2021-07-19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           PatientID LineName   StartDate\n",
-       "8779   F37553C494927    chemo  2020-03-20\n",
-       "1918   F4800A812B339    chemo  2018-12-18\n",
-       "5242   F61FA2C30CD96    chemo  2013-09-11\n",
-       "9491   F12600412495E    chemo  2022-04-29\n",
-       "14514  F187F567846EE    chemo  2017-03-27"
+       "           PatientID       LineName   StartDate\n",
+       "1109   FAD1E6C58E49A  Pembrolizumab  2020-02-03\n",
+       "7811   FB50252A2AA0E  Pembrolizumab  2021-11-01\n",
+       "7283   F4DDDE1E16844  Pembrolizumab  2019-01-08\n",
+       "7423   F4ACFC7D0B84A          chemo  2017-05-01\n",
+       "13316  F1E850629228E  Pembrolizumab  2021-07-19"
       ]
      },
      "execution_count": 15,
@@ -637,35 +637,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_cohort.to_csv('full_cohort.csv', index = False)"
+    "full_cohort.to_csv('../outputs/full_cohort.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "884b924c-f747-4696-8fc2-f052b5eb3512",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.13.1 (v3.13.1:06714517797, Dec  3 2024, 14:00:22) [Clang 15.0.0 (clang-1500.3.9.4)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f6095a3-fada-48bc-a8fa-a9837a80b43d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
