updated output path

--- a/mUC/notebooks/defining_cohort.ipynb
+++ b/mUC/notebooks/defining_cohort.ipynb
@@ -295,32 +295,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2715</th>\n",
-       "      <td>F031C8316272A</td>\n",
+       "      <th>7686</th>\n",
+       "      <td>F5525BAFBEECB</td>\n",
        "      <td>Pembrolizumab</td>\n",
-       "      <td>2022-02-23</td>\n",
+       "      <td>2021-04-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15650</th>\n",
-       "      <td>F557D37E6733F</td>\n",
+       "      <th>1092</th>\n",
+       "      <td>FBE58CF8C10B2</td>\n",
        "      <td>Pembrolizumab</td>\n",
-       "      <td>2019-05-30</td>\n",
+       "      <td>2022-06-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4958</th>\n",
-       "      <td>F51D638D1B57E</td>\n",
-       "      <td>Atezolizumab</td>\n",
-       "      <td>2021-03-15</td>\n",
+       "      <th>9583</th>\n",
+       "      <td>F84214198A790</td>\n",
+       "      <td>Pembrolizumab</td>\n",
+       "      <td>2019-06-26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           PatientID       LineName   StartDate\n",
-       "2715   F031C8316272A  Pembrolizumab  2022-02-23\n",
-       "15650  F557D37E6733F  Pembrolizumab  2019-05-30\n",
-       "4958   F51D638D1B57E   Atezolizumab  2021-03-15"
+       "          PatientID       LineName   StartDate\n",
+       "7686  F5525BAFBEECB  Pembrolizumab  2021-04-02\n",
+       "1092  FBE58CF8C10B2  Pembrolizumab  2022-06-24\n",
+       "9583  F84214198A790  Pembrolizumab  2019-06-26"
       ]
      },
      "execution_count": 8,
@@ -448,32 +448,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8833</th>\n",
-       "      <td>F711FDD9663D1</td>\n",
+       "      <th>16463</th>\n",
+       "      <td>F8FBEB386233C</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2019-12-11</td>\n",
+       "      <td>2020-09-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7375</th>\n",
-       "      <td>FDD17D03BA20A</td>\n",
+       "      <th>5030</th>\n",
+       "      <td>FA9151D7C535A</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2017-02-06</td>\n",
+       "      <td>2021-05-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2582</th>\n",
-       "      <td>F05AC183E3249</td>\n",
+       "      <th>5798</th>\n",
+       "      <td>F262AF767AE4D</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2023-07-21</td>\n",
+       "      <td>2021-09-23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          PatientID LineName   StartDate\n",
-       "8833  F711FDD9663D1    chemo  2019-12-11\n",
-       "7375  FDD17D03BA20A    chemo  2017-02-06\n",
-       "2582  F05AC183E3249    chemo  2023-07-21"
+       "           PatientID LineName   StartDate\n",
+       "16463  F8FBEB386233C    chemo  2020-09-14\n",
+       "5030   FA9151D7C535A    chemo  2021-05-04\n",
+       "5798   F262AF767AE4D    chemo  2021-09-23"
       ]
      },
      "execution_count": 12,
@@ -558,34 +558,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1109</th>\n",
-       "      <td>FAD1E6C58E49A</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2020-02-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7811</th>\n",
-       "      <td>FB50252A2AA0E</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2021-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7283</th>\n",
-       "      <td>F4DDDE1E16844</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2019-01-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7423</th>\n",
-       "      <td>F4ACFC7D0B84A</td>\n",
+       "      <th>14392</th>\n",
+       "      <td>F542C1C8C501D</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2017-05-01</td>\n",
+       "      <td>2016-04-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13316</th>\n",
-       "      <td>F1E850629228E</td>\n",
+       "      <th>7087</th>\n",
+       "      <td>F8E50C7F52CE6</td>\n",
+       "      <td>chemo</td>\n",
+       "      <td>2018-09-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3189</th>\n",
+       "      <td>F2322A7A14F34</td>\n",
+       "      <td>chemo</td>\n",
+       "      <td>2014-05-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12423</th>\n",
+       "      <td>FC472877031B8</td>\n",
        "      <td>Pembrolizumab</td>\n",
-       "      <td>2021-07-19</td>\n",
+       "      <td>2021-11-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10889</th>\n",
+       "      <td>F2763D709DA71</td>\n",
+       "      <td>chemo</td>\n",
+       "      <td>2013-09-23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -593,11 +593,11 @@
       ],
       "text/plain": [
        "           PatientID       LineName   StartDate\n",
-       "1109   FAD1E6C58E49A  Pembrolizumab  2020-02-03\n",
-       "7811   FB50252A2AA0E  Pembrolizumab  2021-11-01\n",
-       "7283   F4DDDE1E16844  Pembrolizumab  2019-01-08\n",
-       "7423   F4ACFC7D0B84A          chemo  2017-05-01\n",
-       "13316  F1E850629228E  Pembrolizumab  2021-07-19"
+       "14392  F542C1C8C501D          chemo  2016-04-04\n",
+       "7087   F8E50C7F52CE6          chemo  2018-09-20\n",
+       "3189   F2322A7A14F34          chemo  2014-05-15\n",
+       "12423  FC472877031B8  Pembrolizumab  2021-11-03\n",
+       "10889  F2763D709DA71          chemo  2013-09-23"
       ]
      },
      "execution_count": 15,
