clipping added to IPTWEstimator

--- a/mUC/notebooks/test.ipynb
+++ b/mUC/notebooks/test.ipynb
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 116,
    "id": "5c72125e-3eb1-485d-9212-28d364bc1e31",
    "metadata": {},
    "outputs": [
@@ -2923,8 +2923,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lr/vkkcj_s12115sxc05ly3mshh0000gn/T/ipykernel_89613/1633725974.py:32: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
-      "  plt.gca().set_yticklabels([f'{abs(int(tick))}' for tick in yticks])\n"
+      "/var/folders/lr/vkkcj_s12115sxc05ly3mshh0000gn/T/ipykernel_89613/815763694.py:32: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "  ax.set_yticklabels([f'{abs(int(tick))}' for tick in yticks])\n"
      ]
     },
     {
@@ -2944,7 +2944,7 @@
     "bins = np.linspace(0, 1, 21)\n",
     "\n",
     "# Histogram for treated patients\n",
-    "plt.hist(df[df[treatment_col] == 1]['propensity_score'], \n",
+    "ax.hist(df[df[treatment_col] == 1]['propensity_score'], \n",
     "         bins = 30, \n",
     "         alpha = 0.3, \n",
     "         label = 'Treatment', \n",
@@ -2954,7 +2954,7 @@
     "# Histogram for untreated patients (horizontal, with negative counts to \"flip\" it)\n",
     "control_scores = df[df[treatment_col] == 0]['propensity_score']\n",
     "weights = -np.ones_like(control_scores)  # Make counts negative\n",
-    "plt.hist(control_scores, \n",
+    "ax.hist(control_scores, \n",
     "         bins=30, \n",
     "         weights=weights,\n",
     "         alpha=0.3, \n",
@@ -2966,15 +2966,15 @@
     "ax.set_title('Propensity Score Distribution by Treatment Group', pad = 25, size = 18, weight = 'bold')\n",
     "ax.set_xlabel('Propensity Score', labelpad = 15, size = 12, weight = 'bold')\n",
     "ax.set_ylabel('Count', labelpad = 15, size = 12, weight = 'bold')\n",
-    "plt.gca().spines['top'].set_visible(False)\n",
-    "plt.gca().spines['right'].set_visible(False)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
     "\n",
-    "yticks = plt.gca().get_yticks()\n",
-    "plt.gca().set_yticklabels([f'{abs(int(tick))}' for tick in yticks])\n",
+    "yticks = ax.get_yticks()\n",
+    "ax.set_yticklabels([f'{abs(int(tick))}' for tick in yticks])\n",
     "\n",
     "ax.legend(prop = {'size': 10})\n",
     "\n",
-    "plt.tight_layout()"
+    "fig.tight_layout()"
    ]
   },
   {
