--- a/mUC/notebooks/test.ipynb
+++ b/mUC/notebooks/test.ipynb
@@ -805,6 +805,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "a226081a-d527-4161-92b4-84dcfa631642",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.61828744, 0.46914082, 0.57004625, ..., 0.81562172, 0.54570479,\n",
+       "       0.24689094], shape=(6461,))"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "propensity_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "0e4ce898-ad97-4609-b2e1-1f8e52b32d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clip_bounds = (0.2, 0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "a8f82e12-b89c-42b0-a321-1a7e5098e87b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b = clip_bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "a9004ef2-9c05-4be0-9506-c3c914208649",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "8b4ab22c-8c0f-4240-b9f6-db02dbc9587b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if clip_bounds is not None:\n",
+    "    lower, upper = clip_bounds\n",
+    "    propensity_score = np.clip(propensity_score, lower, upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b8ebd1ec-66ac-4e99-97fa-7fb709e48801",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.61828744, 0.46914082, 0.57004625, ..., 0.8       , 0.54570479,\n",
+       "       0.24689094], shape=(6461,))"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "propensity_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "9c27422b-d47d-4147-9286-509f858df572",
    "metadata": {},
