--- a/mUC/notebooks/test.ipynb
+++ b/mUC/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "a16acf00-73ae-47a0-80de-0f5a575e612d",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from lifelines import KaplanMeierFitter\n",
-    "from lifelines.utils import restricted_mean_survival_time"
+    "from lifelines.utils import restricted_mean_survival_time, median_survival_times"
    ]
   },
   {
@@ -1045,181 +1045,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "78b6c296-99e3-4189-af4d-ebdc206f2034",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PatientID',\n",
-       " 'DiseaseGrade',\n",
-       " 'SmokingStatus',\n",
-       " 'Surgery',\n",
-       " 'GroupStage_mod',\n",
-       " 'TStage_mod',\n",
-       " 'NStage_mod',\n",
-       " 'MStage_mod',\n",
-       " 'SurgeryType_mod',\n",
-       " 'days_diagnosis_to_adv',\n",
-       " 'adv_diagnosis_year',\n",
-       " 'days_diagnosis_to_surgery',\n",
-       " 'PrimarySite_lower',\n",
-       " 'Gender',\n",
-       " 'age',\n",
-       " 'Ethnicity_mod',\n",
-       " 'Race_mod',\n",
-       " 'region',\n",
-       " 'PDL1_status',\n",
-       " 'FGFR_status',\n",
-       " 'PDL1_binary',\n",
-       " 'ecog_index',\n",
-       " 'ecog_newly_gte2',\n",
-       " 'weight_index',\n",
-       " 'bmi_index',\n",
-       " 'percent_change_weight',\n",
-       " 'hypotension',\n",
-       " 'tachycardia',\n",
-       " 'fevers',\n",
-       " 'hypoxemia',\n",
-       " 'albumin',\n",
-       " 'alp',\n",
-       " 'alt',\n",
-       " 'ast',\n",
-       " 'bicarbonate',\n",
-       " 'bun',\n",
-       " 'calcium',\n",
-       " 'chloride',\n",
-       " 'creatinine',\n",
-       " 'hemoglobin',\n",
-       " 'platelet',\n",
-       " 'potassium',\n",
-       " 'sodium',\n",
-       " 'total_bilirubin',\n",
-       " 'wbc',\n",
-       " 'albumin_max',\n",
-       " 'alp_max',\n",
-       " 'alt_max',\n",
-       " 'ast_max',\n",
-       " 'bicarbonate_max',\n",
-       " 'bun_max',\n",
-       " 'calcium_max',\n",
-       " 'chloride_max',\n",
-       " 'creatinine_max',\n",
-       " 'hemoglobin_max',\n",
-       " 'platelet_max',\n",
-       " 'potassium_max',\n",
-       " 'sodium_max',\n",
-       " 'total_bilirubin_max',\n",
-       " 'wbc_max',\n",
-       " 'albumin_min',\n",
-       " 'alp_min',\n",
-       " 'alt_min',\n",
-       " 'ast_min',\n",
-       " 'bicarbonate_min',\n",
-       " 'bun_min',\n",
-       " 'calcium_min',\n",
-       " 'chloride_min',\n",
-       " 'creatinine_min',\n",
-       " 'hemoglobin_min',\n",
-       " 'platelet_min',\n",
-       " 'potassium_min',\n",
-       " 'sodium_min',\n",
-       " 'total_bilirubin_min',\n",
-       " 'wbc_min',\n",
-       " 'albumin_std',\n",
-       " 'alp_std',\n",
-       " 'alt_std',\n",
-       " 'ast_std',\n",
-       " 'bicarbonate_std',\n",
-       " 'bun_std',\n",
-       " 'calcium_std',\n",
-       " 'chloride_std',\n",
-       " 'creatinine_std',\n",
-       " 'hemoglobin_std',\n",
-       " 'platelet_std',\n",
-       " 'potassium_std',\n",
-       " 'sodium_std',\n",
-       " 'total_bilirubin_std',\n",
-       " 'wbc_std',\n",
-       " 'albumin_slope',\n",
-       " 'alp_slope',\n",
-       " 'alt_slope',\n",
-       " 'ast_slope',\n",
-       " 'bicarbonate_slope',\n",
-       " 'bun_slope',\n",
-       " 'calcium_slope',\n",
-       " 'chloride_slope',\n",
-       " 'creatinine_slope',\n",
-       " 'hemoglobin_slope',\n",
-       " 'platelet_slope',\n",
-       " 'potassium_slope',\n",
-       " 'sodium_slope',\n",
-       " 'total_bilirubin_slope',\n",
-       " 'wbc_slope',\n",
-       " 'anticoagulant',\n",
-       " 'opioid',\n",
-       " 'steroid',\n",
-       " 'antibiotic',\n",
-       " 'diabetic_med',\n",
-       " 'antidepressant',\n",
-       " 'bone_therapy_agent',\n",
-       " 'immunosuppressant',\n",
-       " 'chf',\n",
-       " 'cardiac_arrhythmias',\n",
-       " 'valvular_disease',\n",
-       " 'pulm_circulation',\n",
-       " 'pvd',\n",
-       " 'htn_uncomplicated',\n",
-       " 'htn_complicated',\n",
-       " 'paralysis',\n",
-       " 'other_neuro',\n",
-       " 'chronic_pulm_disease',\n",
-       " 'diabetes_uncomplicated',\n",
-       " 'diabetes_complicated',\n",
-       " 'hypothyroid',\n",
-       " 'renal_failure',\n",
-       " 'liver_disease',\n",
-       " 'pud',\n",
-       " 'aids_hiv',\n",
-       " 'lymphoma',\n",
-       " 'rheumatic',\n",
-       " 'coagulopathy',\n",
-       " 'obesity',\n",
-       " 'weight_loss',\n",
-       " 'fluid',\n",
-       " 'blood_loss_anemia',\n",
-       " 'deficiency_anemia',\n",
-       " 'alcohol_abuse',\n",
-       " 'drug_abuse',\n",
-       " 'psychoses',\n",
-       " 'depression',\n",
-       " 'van_walraven_score',\n",
-       " 'lymph_met',\n",
-       " 'thoracic_met',\n",
-       " 'liver_met',\n",
-       " 'bone_met',\n",
-       " 'other_gi_met',\n",
-       " 'other_combined_met',\n",
-       " 'LineName',\n",
-       " 'event',\n",
-       " 'duration',\n",
-       " 'treatment',\n",
-       " 'propensity_score',\n",
-       " 'weight']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "c8c4f66a-019e-4cde-9dd9-adefb9ee3465",
    "metadata": {},
@@ -1231,40 +1056,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ac135623-bc0c-45f5-ba41-52c931733490",
+   "execution_count": 49,
+   "id": "c795ea2e-e083-42c3-9661-c8534a8f0a29",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        216.0\n",
-       "2       1643.0\n",
-       "4        934.0\n",
-       "7       1147.0\n",
-       "8         50.0\n",
-       "         ...  \n",
-       "6447     132.0\n",
-       "6451     212.0\n",
-       "6453    1227.0\n",
-       "6458     410.0\n",
-       "6459      20.0\n",
-       "Name: duration, Length: 2167, dtype: float64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[treat_mask, 'duration']"
+    "import warnings\n",
+    "from lifelines.exceptions import StatisticalWarning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "32482bb3-8a1e-43a3-a709-a8c2aa52d1ab",
+   "execution_count": 50,
+   "id": "722c7ad7-8b6b-4267-8e0b-dde73bc7bdce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with warnings.catch_warnings():\n",
+    "    warnings.filterwarnings(\"ignore\", category=StatisticalWarning)\n",
+    "    treat_km.fit(\n",
+    "        durations = df.loc[treat_mask, 'duration'],\n",
+    "        event_observed = df.loc[treat_mask, 'event'],\n",
+    "        weights = df.loc[treat_mask, 'weight']\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a3595dc4-cdf6-497b-a4a6-7e608b912d91",
    "metadata": {},
    "outputs": [
     {
@@ -1276,100 +1096,190 @@
       "  estimate the variances. See paper \"Variance estimation when using inverse probability of treatment weighting (IPTW) with survival analysis\"\n",
       "  or \"Adjusted Kaplan-Meier estimator and log-rank test with inverse probability of treatment weighting for survival data.\"\n",
       "                  \n",
+      "  warnings.warn(\n",
+      "/Users/xavierorcutt/Dropbox/TrialRescue/myenv/lib/python3.13/site-packages/lifelines/fitters/kaplan_meier_fitter.py:338: StatisticalWarning: It looks like your weights are not integers, possibly propensity scores then?\n",
+      "  It's important to know that the naive variance estimates of the coefficients are biased. Instead use Monte Carlo to\n",
+      "  estimate the variances. See paper \"Variance estimation when using inverse probability of treatment weighting (IPTW) with survival analysis\"\n",
+      "  or \"Adjusted Kaplan-Meier estimator and log-rank test with inverse probability of treatment weighting for survival data.\"\n",
+      "                  \n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<lifelines.KaplanMeierFitter:\"KM_estimate\", fitted with 4327.77 total observations, 1342.96 right-censored observations>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Estimate survival times\n",
+    "# Kaplan-Meier models \n",
     "treat_km = KaplanMeierFitter()\n",
+    "control_km = KaplanMeierFitter()\n",
+    "\n",
+    "treat_mask = df['treatment'] == 1\n",
+    "control_mask = df['treatment'] == 0\n",
+    "\n",
     "treat_km.fit(\n",
-    "            durations = df.loc[treat_mask, 'duration'],\n",
-    "            event_observed = df.loc[treat_mask, 'event'],\n",
-    "            weights = df.loc[treat_mask, 'weight']\n",
-    "        )"
+    "    durations = df.loc[treat_mask, 'duration'],\n",
+    "    event_observed = df.loc[treat_mask, 'event'],\n",
+    "    weights = df.loc[treat_mask, 'weight']\n",
+    ")\n",
+    "\n",
+    "control_km.fit(\n",
+    "    durations = df.loc[control_mask, 'duration'],\n",
+    "    event_observed = df.loc[control_mask, 'event'],\n",
+    "    weights = df.loc[control_mask, 'weight']\n",
+    ")\n",
+    "\n",
+    "# Initialize empty dictionaries \n",
+    "results = {\n",
+    "    'treatment': {},\n",
+    "    'control': {},\n",
+    "    'difference': {}\n",
+    "}\n",
+    "\n",
+    "psurv_time_points = [180]\n",
+    "rmst_time_points = [365]\n",
+    "median_time = True\n",
+    "\n",
+    "# Probability of survival at selected time points\n",
+    "if psurv_time_points is not None:\n",
+    "    results['treatment']['survival_prob'] = {}\n",
+    "    results['control']['survival_prob'] = {}\n",
+    "    results['difference']['survival_prob'] = {}\n",
+    "    \n",
+    "    for t in psurv_time_points:\n",
+    "        treat_surv = treat_km.predict(t)\n",
+    "        control_surv = control_km.predict(t)\n",
+    "        results['treatment']['survival_prob'][t] = treat_surv\n",
+    "        results['control']['survival_prob'][t] = control_surv\n",
+    "        results['difference']['survival_prob'][t] = treat_surv - control_surv\n",
+    "\n",
+    "# RMST calculation at selected time points\n",
+    "if rmst_time_points is not None: \n",
+    "    results['treatment']['rmst'] = {}\n",
+    "    results['control']['rmst'] = {}\n",
+    "    results['difference']['rmst'] = {}\n",
+    "\n",
+    "    for t in rmst_time_points:\n",
+    "        treat_rmst = restricted_mean_survival_time(treat_km, t=t)\n",
+    "        control_rmst = restricted_mean_survival_time(control_km, t=t)\n",
+    "        results['treatment']['rmst'][t] = treat_rmst\n",
+    "        results['control']['rmst'][t] = control_rmst\n",
+    "        results['difference']['rmst'][t] = treat_rmst - control_rmst\n",
+    "\n",
+    "# Median survival time calculations\n",
+    "if median_time: \n",
+    "    treat_med = treat_km.median_survival_time_\n",
+    "    control_med = control_km.median_survival_time_\n",
+    "    results['treatment']['median'] = treat_med\n",
+    "    results['control']['median'] = control_med\n",
+    "    results['difference']['median'] = treat_med - control_med"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "22ebe5ac-3da2-48e1-97f5-063d339c87bd",
+   "execution_count": 47,
+   "id": "5666d815-92f2-4927-8e88-52178444540a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.5952671132722624)"
+       "{'treatment': {'survival_prob': {180: np.float64(0.5952671132722624)},\n",
+       "  'rmst': {365: np.float64(242.13320884421313)},\n",
+       "  'median': np.float64(281.0)},\n",
+       " 'control': {'survival_prob': {180: np.float64(0.7501627141020287)},\n",
+       "  'rmst': {365: np.float64(283.01154124829463)},\n",
+       "  'median': np.float64(392.0)},\n",
+       " 'difference': {'survival_prob': {180: np.float64(-0.15489560082976628)},\n",
+       "  'rmst': {365: np.float64(-40.878332404081505)},\n",
+       "  'median': np.float64(-111.0)}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "treat_km.predict(180)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "5aee8f2c-f6d3-4efa-9192-b3cffaa39875",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(147.73353330241576)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "restricted_mean_survival_time(treat_km, t=180)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "136a57d9-65b0-41c1-bb16-8c3c46382cc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'KaplanMeierFitter' object has no attribute '_compute_rmst'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtreat_km\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compute_rmst\u001b[49m(\u001b[38;5;241m180\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'KaplanMeierFitter' object has no attribute '_compute_rmst'"
-     ]
-    }
-   ],
-   "source": [
-    "treat_km._compute_rmst(180)"
+    "results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafeaac8-c619-4990-b268-b3d6813db955",
+   "id": "7ce3a66b-b1d2-4c98-8f6d-301dd6cf4699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate bootstrapped 95% CIs\n",
+    "# Initialize empty disctionaries for bootstrapped results \n",
+    "boot_results = {\n",
+    "'treatment': {'survival_prob': {}, 'rmst': {}, 'median': []},\n",
+    "'control': {'survival_prob': {}, 'rmst': {}, 'median': []},\n",
+    "'difference': {'survival_prob': {}, 'rmst': {}, 'median': []}\n",
+    "}\n",
+    "\n",
+    "# Loop over n_bootstrap\n",
+    "rng = np.random.default_rng(seed = 42)\n",
+    "for i in range(n_bootstrap):\n",
+    "\n",
+    "# Sample with replacement using random indices\n",
+    "indices = rng.choice(df.index, size = len(df), replace = True)\n",
+    "df_boot = df.loc[indices].reset_index(drop=True)\n",
+    "\n",
+    "# Recalculate weights using saved model spec\n",
+    "df_boot_weighted = self.fit_transform(\n",
+    "    df_boot,\n",
+    "    treatment_col = self.treatment_col,\n",
+    "    cat_var = self.cat_var,\n",
+    "    cont_var = self.cont_var,\n",
+    "    binary_var = self.binary_var,\n",
+    "    stabilized = self.stabilized,\n",
+    "    lr_kwargs = self.lr_kwargs,\n",
+    "    clip_bounds = self.clip_bounds\n",
+    ")\n",
+    "\n",
+    "# Kaplan-Meier models \n",
+    "treat_km = KaplanMeierFitter()\n",
+    "control_km = KaplanMeierFitter()\n",
+    "\n",
+    "treat_mask = df_boot_weighted[self.treatment_col] == 1\n",
+    "control_mask = df_boot_weighted[self.treatment_col] == 0\n",
+    "\n",
+    "treat_km.fit(\n",
+    "    durations = df_boot_weighted.loc[treat_mask, self.duration_col],\n",
+    "    event_observed = df_boot_weighted.loc[treat_mask, self.event_col],\n",
+    "    weights = df_boot_weighted.loc[treat_mask, weight_col]\n",
+    ")\n",
+    "\n",
+    "control_km.fit(\n",
+    "    durations = df_boot_weighted.loc[control_mask, self.duration_col],\n",
+    "    event_observed = df_boot_weighted.loc[control_mask, self.event_col],\n",
+    "    weights = df_boot_weighted.loc[control_mask, weight_col]\n",
+    ")\n",
+    "\n",
+    "# Calculate survival metrics\n",
+    "if psurv_time_points is not None:\n",
+    "    for t in psurv_time_points:\n",
+    "        boot_results['treatment']['survival_prob'].setdefault(t, []).append(treat_km.predict(t))\n",
+    "        boot_results['control']['survival_prob'].setdefault(t, []).append(control_km.predict(t))\n",
+    "        boot_results['difference']['survival_prob'].setdefault(t, []).append(\n",
+    "            treat_km.predict(t) - control_km.predict(t)\n",
+    "        )\n",
+    "\n",
+    "if rmst_time_points is not None:\n",
+    "    for t in rmst_time_points:\n",
+    "        treat_rmst = restricted_mean_survival_time(treat_km, t=t)\n",
+    "        control_rmst = restricted_mean_survival_time(control_km, t=t)\n",
+    "        boot_results['treatment']['rmst'].setdefault(t, []).append(treat_rmst)\n",
+    "        boot_results['control']['rmst'].setdefault(t, []).append(control_rmst)\n",
+    "        boot_results['difference']['rmst'].setdefault(t, []).append(treat_rmst - control_rmst)\n",
+    "\n",
+    "if median_time:\n",
+    "    treat_med = treat_km.median_survival_time_\n",
+    "    control_med = control_km.median_survival_time_\n",
+    "    boot_results['treatment']['median'].append(treat_med)\n",
+    "    boot_results['control']['median'].append(control_med)\n",
+    "    boot_results['difference']['median'].append(treat_med - control_med)\n"
+   ]
   }
  ],
  "metadata": {
