starting km_confidence_intervals()

--- a/mUC/notebooks/test.ipynb
+++ b/mUC/notebooks/test.ipynb
@@ -1204,82 +1204,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "7ce3a66b-b1d2-4c98-8f6d-301dd6cf4699",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate bootstrapped 95% CIs\n",
-    "# Initialize empty disctionaries for bootstrapped results \n",
-    "boot_results = {\n",
-    "'treatment': {'survival_prob': {}, 'rmst': {}, 'median': []},\n",
-    "'control': {'survival_prob': {}, 'rmst': {}, 'median': []},\n",
-    "'difference': {'survival_prob': {}, 'rmst': {}, 'median': []}\n",
-    "}\n",
-    "\n",
-    "# Loop over n_bootstrap\n",
-    "rng = np.random.default_rng(seed = 42)\n",
-    "for i in range(n_bootstrap):\n",
-    "\n",
-    "# Sample with replacement using random indices\n",
-    "indices = rng.choice(df.index, size = len(df), replace = True)\n",
-    "df_boot = df.loc[indices].reset_index(drop=True)\n",
-    "\n",
-    "# Recalculate weights using saved model spec\n",
-    "df_boot_weighted = self.fit_transform(\n",
-    "    df_boot,\n",
-    "    treatment_col = self.treatment_col,\n",
-    "    cat_var = self.cat_var,\n",
-    "    cont_var = self.cont_var,\n",
-    "    binary_var = self.binary_var,\n",
-    "    stabilized = self.stabilized,\n",
-    "    lr_kwargs = self.lr_kwargs,\n",
-    "    clip_bounds = self.clip_bounds\n",
-    ")\n",
-    "\n",
-    "# Kaplan-Meier models \n",
-    "treat_km = KaplanMeierFitter()\n",
-    "control_km = KaplanMeierFitter()\n",
-    "\n",
-    "treat_mask = df_boot_weighted[self.treatment_col] == 1\n",
-    "control_mask = df_boot_weighted[self.treatment_col] == 0\n",
-    "\n",
-    "treat_km.fit(\n",
-    "    durations = df_boot_weighted.loc[treat_mask, self.duration_col],\n",
-    "    event_observed = df_boot_weighted.loc[treat_mask, self.event_col],\n",
-    "    weights = df_boot_weighted.loc[treat_mask, weight_col]\n",
-    ")\n",
-    "\n",
-    "control_km.fit(\n",
-    "    durations = df_boot_weighted.loc[control_mask, self.duration_col],\n",
-    "    event_observed = df_boot_weighted.loc[control_mask, self.event_col],\n",
-    "    weights = df_boot_weighted.loc[control_mask, weight_col]\n",
-    ")\n",
-    "\n",
-    "# Calculate survival metrics\n",
-    "if psurv_time_points is not None:\n",
-    "    for t in psurv_time_points:\n",
-    "        boot_results['treatment']['survival_prob'].setdefault(t, []).append(treat_km.predict(t))\n",
-    "        boot_results['control']['survival_prob'].setdefault(t, []).append(control_km.predict(t))\n",
-    "        boot_results['difference']['survival_prob'].setdefault(t, []).append(\n",
-    "            treat_km.predict(t) - control_km.predict(t)\n",
-    "        )\n",
-    "\n",
-    "if rmst_time_points is not None:\n",
-    "    for t in rmst_time_points:\n",
-    "        treat_rmst = restricted_mean_survival_time(treat_km, t=t)\n",
-    "        control_rmst = restricted_mean_survival_time(control_km, t=t)\n",
-    "        boot_results['treatment']['rmst'].setdefault(t, []).append(treat_rmst)\n",
-    "        boot_results['control']['rmst'].setdefault(t, []).append(control_rmst)\n",
-    "        boot_results['difference']['rmst'].setdefault(t, []).append(treat_rmst - control_rmst)\n",
-    "\n",
-    "if median_time:\n",
-    "    treat_med = treat_km.median_survival_time_\n",
-    "    control_med = control_km.median_survival_time_\n",
-    "    boot_results['treatment']['median'].append(treat_med)\n",
-    "    boot_results['control']['median'].append(control_med)\n",
-    "    boot_results['difference']['median'].append(treat_med - control_med)\n"
+    "def _generate_bootstrap_indices(df: pd.DataFrame, n_bootstrap: int, random_state: Optional[int] = None) -> List[np.ndarray]:\n",
+    "    rng = np.random.default_rng(seed=random_state)\n",
+    "    return [rng.choice(df.index, size=len(df), replace=True) for _ in range(n_bootstrap)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e0e6df59-e05c-4162-99e6-8a2898fab1fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 576, 5000, 4229, ..., 2236, 3123, 1085], shape=(6461,)),\n",
+       " array([2838, 1537,  724, ..., 4605, 5950, 1453], shape=(6461,)),\n",
+       " array([1030, 4773, 2143, ...,  371, 2893,  326], shape=(6461,)),\n",
+       " array([1199, 2709, 4754, ..., 3596,  787, 5971], shape=(6461,)),\n",
+       " array([3310, 1158, 1229, ..., 3382,  754, 6268], shape=(6461,)),\n",
+       " array([2440, 3907, 3141, ..., 5507,  527, 2698], shape=(6461,)),\n",
+       " array([4797, 4762, 1081, ..., 5006, 2804, 5513], shape=(6461,)),\n",
+       " array([5594,  794, 4961, ..., 5255, 4615, 1988], shape=(6461,)),\n",
+       " array([3254, 5541, 1080, ..., 4562,  385, 2759], shape=(6461,)),\n",
+       " array([5388, 3440, 3785, ..., 5143, 2795, 2897], shape=(6461,))]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_generate_bootstrap_indices(df, n_bootstrap = 10, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ef224b-55e7-4b3b-aff0-3a7982ca66a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
