--- a/mUC/notebooks/survival_pembro.ipynb
+++ b/mUC/notebooks/survival_pembro.ipynb
@@ -79,32 +79,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>F04D0428A1377</td>\n",
-       "      <td>Pembrolizumab</td>\n",
-       "      <td>2019-06-12</td>\n",
+       "      <th>5108</th>\n",
+       "      <td>F65374570A025</td>\n",
+       "      <td>chemo</td>\n",
+       "      <td>2017-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3647</th>\n",
-       "      <td>F0BFE14D8C499</td>\n",
+       "      <th>3237</th>\n",
+       "      <td>FFC20DC02E439</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2014-10-29</td>\n",
+       "      <td>2012-01-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5207</th>\n",
-       "      <td>FC1BAD4F30D57</td>\n",
+       "      <th>4962</th>\n",
+       "      <td>F6EC6A1C8EC8D</td>\n",
        "      <td>chemo</td>\n",
-       "      <td>2020-06-23</td>\n",
+       "      <td>2021-06-22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          PatientID       LineName   StartDate\n",
-       "17    F04D0428A1377  Pembrolizumab  2019-06-12\n",
-       "3647  F0BFE14D8C499          chemo  2014-10-29\n",
-       "5207  FC1BAD4F30D57          chemo  2020-06-23"
+       "          PatientID LineName   StartDate\n",
+       "5108  F65374570A025    chemo  2017-08-01\n",
+       "3237  FFC20DC02E439    chemo  2012-01-10\n",
+       "4962  F6EC6A1C8EC8D    chemo  2021-06-22"
       ]
      },
      "execution_count": 3,
@@ -147,10 +147,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-25 10:27:02,856 - INFO - Successfully read Enhanced_Mortality_V2.csv file with shape: (9040, 2) and unique PatientIDs: 9040\n",
-      "2025-04-25 10:27:02,869 - INFO - Successfully merged Enhanced_Mortality_V2.csv df with index_date_df resulting in shape: (6461, 3) and unique PatientIDs: 6461\n",
-      "2025-04-25 10:27:03,267 - INFO - The following columns ['last_visit_date', 'last_biomarker_date', 'last_oral_date', 'last_progression_date'] are used to calculate the last EHR date\n",
-      "2025-04-25 10:27:03,273 - INFO - Successfully processed Enhanced_Mortality_V2.csv file with final shape: (6461, 6) and unique PatientIDs: 6461. There are 0 out of 6461 patients with missing duration values\n"
+      "2025-04-26 20:45:04,339 - INFO - Successfully read Enhanced_Mortality_V2.csv file with shape: (9040, 2) and unique PatientIDs: 9040\n",
+      "2025-04-26 20:45:04,352 - INFO - Successfully merged Enhanced_Mortality_V2.csv df with index_date_df resulting in shape: (6461, 3) and unique PatientIDs: 6461\n",
+      "2025-04-26 20:45:04,734 - INFO - The following columns ['last_visit_date', 'last_biomarker_date', 'last_oral_date', 'last_progression_date'] are used to calculate the last EHR date\n",
+      "2025-04-26 20:45:04,740 - INFO - Successfully processed Enhanced_Mortality_V2.csv file with final shape: (6461, 6) and unique PatientIDs: 6461. There are 0 out of 6461 patients with missing duration values\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
    "id": "b4877ccc-8f09-4b69-b063-138ba5061b29",
    "metadata": {},
    "source": [
-    "## Merge cleaned data from data_cleaning_auto.ipynb"
+    "## Merge cleaned data from data_cleaning_trial_patients.ipynb"
    ]
   },
   {
@@ -840,7 +840,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lr/vkkcj_s12115sxc05ly3mshh0000gn/T/ipykernel_35917/868052135.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/lr/vkkcj_s12115sxc05ly3mshh0000gn/T/ipykernel_42884/868052135.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  df.groupby(['adv_diagnosis_year', 'treatment']).size().unstack(fill_value=0)\n"
      ]
     },
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "31d17e0c-bda3-4c3c-bb8d-8f92a79050b2",
    "metadata": {},
    "outputs": [
@@ -1197,11 +1197,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9d5a401-2f60-493f-a4e6-d742cb1e01c9",
+   "execution_count": 41,
+   "id": "aa03bea1-e1df-4192-92cc-1beda84eab42",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results = estimator.survival_metrics(df = iptw_df,\n",
+    "                                     duration_col = 'duration',\n",
+    "                                     event_col = 'event',\n",
+    "                                     weight_col = 'iptw',\n",
+    "                                     psurv_time_points = [36, 48],\n",
+    "                                     rmst_time_points = [36, 48],\n",
+    "                                     median_time = True,\n",
+    "                                     n_bootstrap = 1000,\n",
+    "                                     random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "11c7b39d-4234-4b9c-8c1f-dfa6dfba8daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median Survival Results\n",
+      "Pembrolizumab: (10.3, 8.3, 12.1) months\n",
+      "Chemotherapy: (13.3, 12.5, 14.1) months\n",
+      "Difference: (-3.0, -5.1, -1.1) months\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Median results\n",
+    "print('Median Survival Results')\n",
+    "print(f'Pembrolizumab: {tuple(round(x, 1) for x in results['treatment']['median'])} months')\n",
+    "print(f'Chemotherapy: {tuple(round(x, 1) for x in results['control']['median'])} months')\n",
+    "print(f'Difference: {tuple(round(x, 1) for x in results['difference']['median'])} months')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f9d5a401-2f60-493f-a4e6-d742cb1e01c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMST Results at 3 Years\n",
+      "Pembrolizumab: (16.2, 15.4, 17.1) months\n",
+      "Chemotherapy: (17.5, 16.9, 18.0) months\n",
+      "Difference: (-1.3, -2.2, -0.2) months\n",
+      "\n",
+      "RMST Results at 4 Years\n",
+      "Pembrolizumab: (19.2, 18.0, 20.4) months\n",
+      "Chemotherapy: (20.1, 19.4, 20.8) months\n",
+      "Difference: (-0.9, -2.2, 0.5) months\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RMST results at 3 years\n",
+    "print('RMST Results at 3 Years')\n",
+    "print(f'Pembrolizumab: {tuple(round(x, 1) for x in results['treatment']['rmst'][36])} months')\n",
+    "print(f'Chemotherapy: {tuple(round(x, 1) for x in results['control']['rmst'][36])} months')\n",
+    "print(f'Difference: {tuple(round(x, 1) for x in results['difference']['rmst'][36])} months')\n",
+    "\n",
+    "# RMST results at 4 years\n",
+    "print('')\n",
+    "print('RMST Results at 4 Years')\n",
+    "print(f'Pembrolizumab: {tuple(round(x, 1) for x in results['treatment']['rmst'][48])} months')\n",
+    "print(f'Chemotherapy: {tuple(round(x, 1) for x in results['control']['rmst'][48])} months')\n",
+    "print(f'Difference: {tuple(round(x, 1) for x in results['difference']['rmst'][48])} months')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "460e99c4-ecf3-40cf-b2be-6f9bc7d50950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of Survival at 3 Years\n",
+      "Pembrolizumab: (0.266, 0.236, 0.302)\n",
+      "Chemotherapy: (0.242, 0.224, 0.258)\n",
+      "Difference: (0.025, -0.01, 0.063)\n",
+      "\n",
+      "Probability of Survival at 4 Years\n",
+      "Pembrolizumab: (0.231, 0.197, 0.266)\n",
+      "Chemotherapy: (0.196, 0.18, 0.212)\n",
+      "Difference: (0.035, 0.0, 0.072)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Probability of survival at 3 years\n",
+    "print('Probability of Survival at 3 Years')\n",
+    "print(f'Pembrolizumab: {tuple(round(x, 3) for x in results['treatment']['survival_prob'][36])}')\n",
+    "print(f'Chemotherapy: {tuple(round(x, 3) for x in results['control']['survival_prob'][36])}')\n",
+    "print(f'Difference: {tuple(round(x, 3) for x in results['difference']['survival_prob'][36])}')\n",
+    "\n",
+    "# Probability of survival at 4 years\n",
+    "print('')\n",
+    "print('Probability of Survival at 4 Years')\n",
+    "print(f'Pembrolizumab: {tuple(round(x, 3) for x in results['treatment']['survival_prob'][48])}')\n",
+    "print(f'Chemotherapy: {tuple(round(x, 3) for x in results['control']['survival_prob'][48])}')\n",
+    "print(f'Difference: {tuple(round(x, 3) for x in results['difference']['survival_prob'][48])}')"
+   ]
   }
  ],
  "metadata": {
